# Rust-Discord-API

./: .gitignore  LICENSE  README.md
rustdiscordapi/: Cargo.toml  README.md
rustdiscordapi/src/: build.rs  lib.rs  router.rs
rustdiscordapi/src/internal/: config.rs  error.rs  logging.rs  mod.rs
rustdiscordapi/src/utils/: arguments.rs  channel.rs  embed.rs  error.rs  guild.rs  guild_scheduled_event.rs  message.rs  mod.rs  permissions.rs  poll.rs  role.rs  sticker.rs  user.rs  webhook.rs
